2004-01-26 Al Riddoch <alriddoch@zepler.org>

	* src/services/server/ServerService.cpp,
	  src/main/Dime.cpp: Fixes to build with the latest updates
	  to Atlas-C++ and Eris.

	* src/components/ogre/Console.cpp: Include fixes to build
	  with the latest Ogre.

2004-01-20 Ron Steinke <rsteinke@w-link.net>
	* configure.ac: Add $SDL_LIBS as the 'additional libs' argument
	  of AC_CHECK_LIB for SDL_image. This will hopefully allow the
	  test to link on win32.

2003-11-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
        * src/components/ogre: fixed rotation and viewing for the Avatar. 

2003-12-08 Al Riddoch <alriddoch@zepler.org>
	* src/services/test/TestService.cpp: Use <iostream> instead of
	  <iostream.h> and fix std:: namespace usage.

2003-12-08 Al Riddoch <alriddoch@zepler.org>
	* src/services/ServiceTest.cpp: Use <iostream> instead of <iostream.h>
	  and fix std:: namespace usage.

2003-12-07 Al Riddoch <alriddoch@zepler.org>
	* src/services/ServiceTest.cpp: Fix conversion glitch so that
	  this test compiles.

2003-11-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/components/ogre: added AvatarKeyboardListener.(h|cpp)
	and restored local avatar movement.

2003-11-26 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/components/ogre: added Avatar.(h|cpp) to store
	the whole scenenode tree for the avatar and to control
	its movement, looks, etc.

2003-11-25 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/components/ogre: added 3rd person camera and
	(now working) top view camera. Added another camera
	("spycam") for debugging purposes.

2003-11-18 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/services/server/ServerService.cpp: myWorld is
	not created by this service anymore, instead is 
	retrieved from myAvatar after taking/creating char.
	Modified touch op so we can touch any entity.
	* src/components/ogre/*: overall improvement. 
	Added EntityListener.(h|cpp) to listen to and act 